# sight

./: .editorconfig  .gitignore  Cargo.toml  README.md
examples/: avatar.rs  mandelbrot.rs  simple.rs  triangle.rs
src/: lib.rs
src/color/: hsl.rs  mod.rs  rgb_hsl.rs
src/color/bgr/: bgr32.rs  bgr64.rs  bgr8.rs  mod.rs
src/color/rgb/: mod.rs  rgb32.rs  rgb64.rs  rgb8.rs
src/display/: buffer.rs  image.rs  math.rs  mod.rs  rotate.rs  transpose.rs
src/error/: data.rs  mod.rs
src/geometry/: vec2.rs  vec3.rs
src/math/: mod.rs  transpose.rs  vec3.rs
