[package]
name = "sight"
version = "0.1.0"
authors = ["rchudin <rus.chudin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
raw-window-handle = "0.3"


[target.'cfg(windows)'.dependencies]
winapi = "0.3"


[dev-dependencies]
image = "0.23"
winit = "0.23"
